# ifc-gpt2.0

./: .env.example  .gitignore  AGENTS.md  AUDIT_ISSUES.json  ISSUES.json  MANUAL_STEPS.md  PLAN.md  PROJECT_REPORT.md  README.md  RESEARCH.md  generate_highrise.py  main.py  pyproject.toml
IFC MiCs/: ifc_create.ipynb  ifc_explore_and_extract.ipynb
agent/: __init__.py  graph.py  llm.py  schemas.py
api/: __init__.py  deps.py  server.py  storage.py
building_blocks/: __init__.py  bsdd.py  context.py  mic_catalog.py  psets.py
floorplan/: __init__.py  detect.py  ingest.py  pipeline.py  plan_builder.py  scale.py  vectorise.py
supabase/: schema.sql
tests/: conftest.py  test_assemblies.py  test_beam.py  test_bsdd.py  test_build_node.py  test_build_type_dispatch.py  test_clarify.py  test_column.py  test_context.py  test_covering.py  test_curtain_wall.py  test_door.py  test_elevator.py  test_export_node.py  test_floorplan.py  test_footing.py  test_intake.py  test_member.py  test_mic_catalog.py  test_mic_module.py  test_opening.py  test_plan_checks.py  test_plan_node.py  test_psets.py  test_ramp.py  test_repair_node.py  test_roof.py  test_semantic_checks.py  test_slab.py  test_stair.py  test_storage.py  test_types.py  test_wall.py  test_window.py
validation/: __init__.py  plan_checks.py  runner.py  schema_check.py  semantic_checks.py
web/: next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
workspace/: 12unit_plan.json  12unit_v2_plan.json  12unit_v3_plan.json  cv_plan.json  cv_plan_v3.json  floorplan_learnings.json  (+5 more)
(+101 files in other folders)
